// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Container config should apply guest inventory configuration: filtered 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "lorem inventory id",
    },
    Object {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "subscriptionManagerId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply guest inventory configuration: filtered, authorized 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    Object {
      "title": "lorem inventory id",
    },
    Object {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"guestsDisplayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "subscriptionManagerId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply hosts inventory configuration: filtered 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <React.Fragment>
        lorem
         
        t(curiosity-inventory.label, {"context":"numberOfGuests","count":3}, [object Object])
      </React.Fragment>,
    },
    Object {
      "title": 100,
    },
    Object {
      "title": 20,
    },
    Object {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "cores": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores\\"})",
      "value": 20,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "numberOfGuests": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "value": 3,
    },
    "sockets": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets\\"})",
      "value": 100,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply hosts inventory configuration: filtered, fallback display 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "",
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "cores": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores\\"})",
      "value": null,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": null,
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": null,
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
    "numberOfGuests": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "value": null,
    },
    "sockets": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets\\"})",
      "value": null,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply subscriptions inventory configuration: filtered 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "hello world",
    },
    Object {
      "title": "",
    },
    Object {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    Object {
      "title": "2022-01-01",
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"quantity\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscriptions\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "has_infinite_quantity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"has_infinite_quantity\\"})",
      "value": true,
    },
    "next_event_date": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "value": "lorem",
    },
    "service_level": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "value": "hello world",
    },
    "total_capacity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"total_capacity\\"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply subscriptions inventory configuration: filtered, fallback display 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "",
    },
    Object {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    Object {
      "title": "",
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"quantity\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscriptions\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "has_infinite_quantity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"has_infinite_quantity\\"})",
      "value": true,
    },
    "next_event_date": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "value": null,
    },
    "product_name": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "value": "lorem",
    },
    "service_level": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "value": null,
    },
    "total_capacity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"total_capacity\\"})",
      "value": 2000,
    },
  },
}
`;
